--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.violet-background-gradient {
+    background: linear-gradient(65deg, #4386F4, #6A5ACD, #8A2BE2, #3216BC)
+}
+
 .violet-text-gradient {
-    background: linear-gradient(90deg, #4386F4, #6A5ACD, #8A2BE2);
+    background: linear-gradient(90deg, #4386F4, #6A5ACD, #8A2BE2, #3216BC);
     color: transparent;
     background-clip: text;
 }
